--- a/index.html
+++ b/index.html
@@ -14,7 +14,22 @@
 	</head>
 
 	<body>
-		<div></div>
+		<div id="container">
+			<div class="header">
+				<h1>Heading Home</h1>
+			</div>
+
+			<div class="main">
+				<h2>Heading</h2>
+				<img src="images/kitten.jpg" alt="kitten image like lore ipsum">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae cumque beatae eligendi aspernatur nostrum facere. Vitae distinctio libero, maxime, similique quasi nemo doloribus, cumque cum esse voluptate expedita ullam perferendis? Minus dicta nesciunt sit? Cumque dignissimos consequatur dolore eveniet quae.</p>
+				<h2>Block Post #2</h2>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas similique veritatis fugit esse aliquid corrupti.	</p>
+			</div>
+			<div class="footer">
+				<p>Created by fingolfin in the third millenium after the birth of a not so irrelevant person</p>
+			</div>
+		</div>
 
 	</body>
 </html>
