--- a/index.html
+++ b/index.html
@@ -14,19 +14,29 @@
 	</head>
 
 	<body>
-		<div id="container">
+		<div class="container">
 			<div class="header">
 				<h1>Heading Home</h1>
 			</div>
 
 			<div class="main">
 				<h2>Heading</h2>
-				<img src="images/kitten.jpg" alt="kitten image like lore ipsum">
+				<img src="images/kitten.jpg" alt="kitten image like lore ipsum" class="kitten-img">
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae cumque beatae eligendi aspernatur nostrum facere. Vitae distinctio libero, maxime, similique quasi nemo doloribus, cumque cum esse voluptate expedita ullam perferendis? Minus dicta nesciunt sit? Cumque dignissimos consequatur dolore eveniet quae.</p>
 				<h2>Block Post #2</h2>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas similique veritatis fugit esse aliquid corrupti.	</p>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas similique veritatis fugit esse aliquid corrupti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi eos maxime dolores ducimus nihil sit mollitia provident magni quos tempora aspernatur, modi quasi voluptas nisi, expedita, veniam quam veritatis at.</p>
 			</div>
-			<div class="footer">
+			<div class="sidebar">
+				<h3>Sidebar</h3>
+				<ul>
+					<li>01</li>
+					<li>discord</li>
+					<li>reddit</li>
+					<li>github</li>
+				</ul>
+			</div>
+			<div class="clear"></div>
+			<div class="footer" id="footer">
 				<p>Created by fingolfin in the third millenium after the birth of a not so irrelevant person</p>
 			</div>
 		</div>
